* sfsparsify: put nonzero elements of 2-D array into sparse form
* sfmoveout: put spikes at an arbitrary moveout.
* sfcconv: 1-D convolution with complex numbers.
* sfpyramid: pyramid transform.
* sfshapeagc: automatic gain control by shaping regularization.
* modified sfsuwrite for consistency with sfsuread
* user/chen: new contributor (Zhonghuan Chen)

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Included previously undocumented parameters (dash,plotcol,plotfat)
  in stdplot.

In APIs:

In the Python package:
* Hires Bounding Box detection in Mathematica plots
* Location of config.py in configure.py 
* Prevent segfault when the input file is closed prematurely.

In programs:
* Fixed sfpen (via dovplot) bug
* Fixed sflosignoi bug
* Fixed sfdots axis-positioning bug
* Fixed sfmath crash when datapath was specified
* Fixed handling of infinite values in sfgraph
* Fixed handling of different output size in sfiwarp
* Fixed sftransp off-core I/O bug 

In the build system:
* Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
* Eliminated hardcoded paths that made it impossible to package m8r
* Workaround for SCons bug #1488 
* Fixed MacPorts and Fink path detection for compilers other than gcc
  on Mac
* Fixed bug preventing spaces in ./configure arguments

===Changes in defaults===

==Release 1.2 (2011-07-14)==

===Additions and enhancements===

To the reproducible documents collection:

* swag/anisogath: Angle gathers in wave-equation imaging for
  transversely isotropic media (Alkhalifah and Fomel) 
* jsg/agath: Theory of 3-D angle gathers in wave-equation seismic
  imaging (Fomel)
* cwp/pept2011MicroearthquakeMonitoring: Micro-earthquake monitoring
  with sparsely-sampled data (Sava)
* jsg/vc3: Azimuthally anisotropic 3D velocity continuation (Burnett
  and Fomel)
* milano/taupvel: Velocity-independent tau-p moveout in a
  horizontally-layered VTI medium (Casasanta and Fomel)