@@ -1,0 +1,24 @@
+from rsf.proj import *
+
+Flow('pyram',None,
+     '''
+     spike n1=120 n2=40 nsp=2 k1=30,90 k2=22,9 label1= label2= |
+     smooth rect1=20 rect2=14
+     ''')
+
+Flow('mound',None,
+     '''
+     spike n1=120 n2=40 nsp=2 k1=40,80 k2=22,12 label1= label2= |
+     smooth rect1=20 rect2=13 repeat=2
+     ''')
+
+for case in ('pyram','mound'):
+    Plot(case+'c',case,
+         '''
+         contour transp=n yreverse=n wanttitle=n wantaxis=n
+         c0=0.0005 
+         ''')
+    Plot(case+'h',case,'thplot wanttitle=n axis=n')
+    Result(case,[case+'h',case+'c'],'OverUnderAniso')
+
+End()
